New wedding site info
Change-Id: I006e4a1e46ec783226904aaa3fd59d6d66765fdb

--- a/index.html
+++ b/index.html
@@ -5,96 +5,143 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Chris Carpita">
 
-    <title>Chris &amp; Danielle are Getting Married on September 27, 2014</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
-    <!-- Custom styles for this template -->
-    <link href="navbar-static-top.css" rel="stylesheet">
+    <title>Chris &amp; Danielle are Getting Married on September 27, 2014!</title>
+<!--
+      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
+-->
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <link href="/assets/css/wedding.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
   </head>
 
   <body>
 
     <!-- Static navbar -->
     <div class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container">
         <div class="navbar-header">
-<!--
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
--->
-          <a class="navbar-brand" href="/">Chris &amp; Danielle | September 27, 2014</a>
+          <ul class="nav navbar-nav clear">
+            <li><a href="#location">Location</a></li>
+            <li><a href="#directions">Directions</a></li>
+            <li><a href="#hotels">Hotels</a></li>
+            <li><a href="#taxi">Taxi</a></li>
+            <br class="clear" />
+          </ul>
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-<!--
-            <li><a href="../navbar/">Default</a></li>
-            <li class="active"><a href="./">Static top</a></li>
-            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
--->
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </div>
 
-
     <div class="container">
-
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Chris &amp; Danielle</h1>
-            <div class="col-md-6">
-            <img width="100%" style="float:left" src="/img/dpita2.jpg" />
-            </div>
-            <div class="col-md-6">
-            <img width="100%" style="float:left" src="/img/dpita1.jpg" />
-            </div>
+      <div style="text-align:center">
+        <h1>Chris &amp; Danielle are Getting Married!</h1>
+        <h3>September 27, 2014</h3>
+
+        <div class="row text-center" style="padding:5px">
+          <img class="round" style="max-width:400px" src="/assets/img/dpita2.jpg" />
+        </div>
+
         <br style="clear:left" />
-        <p>These two lovebirds are getting hitched, and we want to have a wild time with our friends &amp; family! </p>
+        <p><strong>Come celebrate with us!</strong></p>
       </div>
 
-      <div>
-        <h2>Hotels</h2>
-        <p>You're probably wondering where you should knock out some winks for the night.  We're trying to find out the best deals, and we'll this section soon!</p>
+      <div class="container">
+        <a name="location"></a>
+        <div class="imagetitle">
+        <img src="/assets/img/maple-shade-entrance.jpg"
+          class="round" />
+          <h2><span>Where?</span></h2>
+        </div>
+        <p>We're excited to be having our wedding at
+          <a href="http://www.mapleshadefarmny.com/">Maple Shade Farm</a>,
+        located at 2066 County Hwy 18 in Delhi, NY.
+        </p>
+        <p>
+        Maple Shade Farm was settled in 1785 by Daniel Frisbee, son of Judge Gideon Frisbee. Gideon Frisbee was one of the early pioneers of Delaware County. Jay and Abby Wilson purchased the property in July of 2007 and are raising their three children on the farm in the County where they grew up and attended school together. The Wilson Family opened their farm to the public in September 2008
+to share their passion for agriculture and education.</p>
+        <p>EDIT: ^ Come up with something more interesting than this</p>
       </div>
-      
-      <div>
-        <h2>Directions</h2>
-        <p>The wedding will take place at Maple Shade Farms near Delhi, NY -- the closest city with hotels is Oneonta</p>
+
+
+
+      <!--Hotels-->
+      <div class="container">
+        <a name="hotels"></a>
+        <div class="imagetitle">
+          <img src="/assets/img/hampton-inn-room.jpg" class="round" />
+          <h2><span>Hotels</span></h2>
+        </div>
+        <h3>Hampton Inn - <small>$99/night</small></h3>
+        <p>We have blocks of rooms reserved at this hotel. Make sure to mention our names to get the group rate!</p>
+        <p>225 River Street, Oneonta, New York, 13820</p>
+        <p>Phone: 607.433.9000</p>
+        <p><a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html" target="_blank">Website</a>
+
+
+        <h3>Holiday Inn - <small>$129+/night</small></h3>
+        <p>Also in Oneonta, this hotel is adjacent to a bowling alley, if that kind of thing rolls your pins. We don't have a group rate here, but we've actually stayed here before and recommend it.</p>
+        <p>5206 New York 23, Oneonta, NY 13820</p>
+        <p>Phone: 607.433.2250</p>
+
+        <h3>Vacation Rentals</h3>
+        <p>If you want somewhere more rustic or adventurous to stay, we
+          recommend checking out available houses near Delhi on
+            <a href="https://www.airbnb.com/search/Delhi--NY--United-States?checkin=09%2F26%2F2014&amp;checkout=09%2F28%2F2014&amp;guests=2">AirBnB</a>
+          </p>
       </div>
+
+
+      <!-- Directions -->
+      <div class="container">
+        <a name="directions"></a>
+        <div class="imagetitle">
+          <h2><span>Directions</span></h2>
+          <img alt="Google Map" src="/assets/img/maple-shade-map.jpg"
+            class="round" />
+        </div>
+
+          <p>The best way to get directions to Maple Shade is to use
+           <a title="Click to enter directions"
+          href="https://www.google.com/maps/dir//Maple+Shade+Farm,+2066+County+Hwy+18,+Delhi,+NY+13753/@42.316361,-74.898578,11z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89dc7a3d318ba153:0x42a252d66d671cfc!2m2!1d-74.8702!2d42.301286?hl=en-US">
+            Google Maps</a>, enter your starting location, and print them
+            out or e-mail them to yourself.
+          </p>
+          <p>Note that cell reception can
+            get spotty while you're driving through the Catskills, so make
+            sure to have your directions printed or saved offline!
+          </p>
+      </div>
+
+      <!-- Taxi -->
+      <div class="container">
+        <a name="#taxi"></a>
+        <div class="imagetitle">
+          <h2 class="hide"><span>Taxi</span></h2>
+          <img src="/assets/img/taxi.jpg" class="round" />
+        </div>
+        <p>Planning to help yourself to the bar, and then some?  You'll want to add these numbers to your contacts.</p>
+
+        <h3>A &amp; D Taxis</h3>
+        <p>Phone: 608.433.TAXI</p>
+        <p><a href="http://www.adtransportservices.com">http://www.adtransportservices.com</a></p>
+
+        <h3>Oneonta Taxi</h3>
+        <p>Phone: 607.437.5267</p>
+        <p><a href="http://www.oneonta-ny-taxi.com">http://www.oneonta-ny-taxi.com</a></p>
+
+        <h3>All Star Taxi Service</h3>
+        <p>Phone: 607.267.1834</p>
+
+      </div>
+
 
     </div> <!-- /container -->
-
+    <script src="/assets/js/wedding.js" />
   </body>
 </html>
