More details, publish action
Change-Id: I7c0169d4d3f04e0350712c05b125d797e551ef4f

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="navbar-header">
           <ul class="nav navbar-nav clear">
-            <li><a href="#location">Location</a></li>
+            <li><a href="#festivities">Festivities</a></li>
+            <li><a href="#hotels">Accomodations</a></li>
             <li><a href="#directions">Directions</a></li>
-            <li><a href="#hotels">Hotels</a></li>
-            <li><a href="#taxi">Taxi</a></li>
+            <li><a href="#contact">Contact</a></li>
             <br class="clear" />
           </ul>
         </div>
@@ -48,63 +48,92 @@
         </div>
 
         <br style="clear:left" />
-        <p><strong>Come celebrate with us!</strong></p>
+        <h3><strong>Come celebrate with us!</strong></h3>
       </div>
 
       <div class="container">
-        <a name="location"></a>
-        <div class="imagetitle">
-        <img src="/assets/img/maple-shade-entrance.jpg"
-          class="round" />
-          <h2><span>Where?</span></h2>
-        </div>
-        <p>We're excited to be having our wedding at
-          <a href="http://www.mapleshadefarmny.com/">Maple Shade Farm</a>,
-        located at 2066 County Hwy 18 in Delhi, NY.
-        </p>
-        <p>
-        Maple Shade Farm was settled in 1785 by Daniel Frisbee, son of Judge Gideon Frisbee. Gideon Frisbee was one of the early pioneers of Delaware County. Jay and Abby Wilson purchased the property in July of 2007 and are raising their three children on the farm in the County where they grew up and attended school together. The Wilson Family opened their farm to the public in September 2008
-to share their passion for agriculture and education.</p>
-        <p>EDIT: ^ Come up with something more interesting than this</p>
-      </div>
+        <a name="festivities"></a>
+        <h2><span>Festivities</span></h2>
 
+        <h3>Friday, September 26th</h3>
+
+        <h4>Rehearsal Dinner <small>5pm-7pm (Family invited)</small></h4>
+        <p>Location: TBD Oneonta, NY -- close to major hotels</p>
+
+        <h4>Rehearsal Bowl <small>8pm-10pm (Everyone invited)</small></h4>
+        <p>Location: Holiday Lanes- 5198 State Highway 23 # 1, Oneonta, NY 13820</p>
+        <p>Phone: 607.432.2540</p>
+
+        <p>Come say hello to the bride and groom, mingle with friends and family, and bowl a game or two. There's also an arcade, pool tables, a full bar, and pub menu. We wil have a few lanes reserved. Shoe rental and a game is $9. We will send an Eventbrite invitation as the date gets closer for RSVP. Dress is casual!</p>
+
+        <h3>Saturday, September 27th</h3>
+
+        <h4>The Big Day <small>4pm-12am</small></h4>
+        <p>Location: Maple Shade Farm- 2066 County Hwy 18, Delhi, New York, 607.746.8866</p>
+        <p>Join us for our ceremony, BBQ, and dancing! Dress is festive. Wedges or flats are recommended (you'll sink in heals!).</p>
+
+        <h3>Sunday, September 28th</h3>
+        <h4>Bagel Brunch <small>10am-1pm</small></h4>
+        <p>Location: Maple Shade Farm- 2066 County Hwy 18, Delhi, New York, 607.746.8866</p>
+        <p>Come say hi to the newlyweds back at the farm for a bite before you travel home.</p>
+         <a href="http://www.mapleshadefarmny.com/">
+          <img src="/assets/img/maple-shade-front.jpg"
+          class="round" />
+        </a>
+      </div>
 
 
       <!--Hotels-->
       <div class="container">
+
+        <h2><span>Accomodations</span></h2>
+
         <a name="hotels"></a>
-        <div class="imagetitle">
-          <img src="/assets/img/hampton-inn-room.jpg" class="round" />
-          <h2><span>Hotels</span></h2>
-        </div>
+
         <h3>Hampton Inn - <small>$99/night</small></h3>
-        <p>We have blocks of rooms reserved at this hotel. Make sure to mention our names to get the group rate!</p>
+        <p>We have blocks of rooms reserved at this hotel. Make sure to mention the "Carpita-Pollaci Wedding" to get the group rate, which will be valid until late July. We recommend people book their accommodations as soon as possible, as this is a popular time of year for visitors. Check in time is 3pm.</p>
         <p>225 River Street, Oneonta, New York, 13820</p>
         <p>Phone: 607.433.9000</p>
-        <p><a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html" target="_blank">Website</a>
+        <p><a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html">Hampton Inn Website</a></p>
 
 
         <h3>Holiday Inn - <small>$129+/night</small></h3>
-        <p>Also in Oneonta, this hotel is adjacent to a bowling alley, if that kind of thing rolls your pins. We don't have a group rate here, but we've actually stayed here before and recommend it.</p>
+        <p>Another reliable choice in Oneonta, this hotel is adjacent to the venue for our Rehearsal Bowl. There's no group rate here, but we have actually stayed here before and recommend it as an alternative to Hampton Inn. Check in time is 3pm.</p>
         <p>5206 New York 23, Oneonta, NY 13820</p>
         <p>Phone: 607.433.2250</p>
 
         <h3>Vacation Rentals</h3>
         <p>If you want somewhere more rustic or adventurous to stay, we
           recommend checking out available houses near Delhi on
-            <a href="https://www.airbnb.com/search/Delhi--NY--United-States?checkin=09%2F26%2F2014&amp;checkout=09%2F28%2F2014&amp;guests=2">AirBnB</a>
+            <a href="https://www.airbnb.com/s/Delhi--NY--United-States?checkin=09%2F26%2F2014&amp;checkout=09%2F28%2F2014&amp;guests=2">AirBnB</a>
           </p>
+
+        <h3>Camping</h3>
+        <p>Upstate New York has many great camping sites.  Search for campsites
+        near Delhi on September 27th on the <a href="http://newyorkstateparks.reserveamerica.com/">NYS Campground Reservation Site.</a></p>
+
+        <div class="imagetitle">
+        <a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html">
+          <img src="/assets/img/hampton-inn-room.jpg" class="round" />
+        </a>
+        </div>
       </div>
 
+      <div class="container">
+        <h2>Things to Do</h2>
+        <p>Details Coming Soon</p>
+      </div>
 
+      <div class="container">
+      <h2>Gift Registry</h2>
+      <p>Details Coming Soon</p>
+      </div>
+
+ 
       <!-- Directions -->
       <div class="container">
         <a name="directions"></a>
-        <div class="imagetitle">
-          <h2><span>Directions</span></h2>
-          <img alt="Google Map" src="/assets/img/maple-shade-map.jpg"
-            class="round" />
-        </div>
+        <h2><span>Directions</span></h2>
 
           <p>The best way to get directions to Maple Shade is to use
            <a title="Click to enter directions"
@@ -116,31 +145,39 @@ to share their passion for agriculture and education.</p>
             get spotty while you're driving through the Catskills, so make
             sure to have your directions printed or saved offline!
           </p>
-      </div>
 
-      <!-- Taxi -->
-      <div class="container">
-        <a name="#taxi"></a>
+          <p>The closest airport is in Binghamton (BGM), but if you're renting
+          a car it's possible that flying to EWR, JFK, or LGA will be less costly.</p>
+
+          <h3>Taxi Services</h3>
+
+          <h4>A &amp; D Taxis</h4>
+          <p>Phone: 608.433.TAXI</p>
+          <p><a href="http://www.adtransportservices.com">http://www.adtransportservices.com</a></p>
+
+          <h4>Oneonta Taxi</h4>
+          <p>Phone: 607.437.5267</p>
+          <p><a href="http://www.oneonta-ny-taxi.com">http://www.oneonta-ny-taxi.com</a></p>
+
+          <h4>All Star Taxi Service</h4>
+          <p>Phone: 607.267.1834</p>
         <div class="imagetitle">
-          <h2 class="hide"><span>Taxi</span></h2>
-          <img src="/assets/img/taxi.jpg" class="round" />
+        <a href="https://www.google.com/maps/dir//Maple+Shade+Farm,+2066+County+Hwy+18,+Delhi,+NY+13753/@42.316361,-74.898578,11z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89dc7a3d318ba153:0x42a252d66d671cfc!2m2!1d-74.8702!2d42.301286?hl=en-US">
+          <img alt="Google Map" src="/assets/img/maple-shade-map.jpg"
+            class="round" />
+          </a>
         </div>
-        <p>Planning to help yourself to the bar, and then some?  You'll want to add these numbers to your contacts.</p>
-
-        <h3>A &amp; D Taxis</h3>
-        <p>Phone: 608.433.TAXI</p>
-        <p><a href="http://www.adtransportservices.com">http://www.adtransportservices.com</a></p>
-
-        <h3>Oneonta Taxi</h3>
-        <p>Phone: 607.437.5267</p>
-        <p><a href="http://www.oneonta-ny-taxi.com">http://www.oneonta-ny-taxi.com</a></p>
-
-        <h3>All Star Taxi Service</h3>
-        <p>Phone: 607.267.1834</p>
 
       </div>
 
 
+
+      <div class="container">
+      <a name="contact"></a>
+      <h2>Contact Us</h2>
+      <p>Email us at <a href="mailto:dpitachip@gmail.com">dpitachip@gmail.com</a>
+       with questions, comments, or excitations!</p>
+       <p>&nbsp;</p>
     </div> <!-- /container -->
     <script src="/assets/js/wedding.js" />
   </body>
