Edits and navbar fix.  Broken: gallery
Change-Id: I7f6d36f4ea1db7af40d2f0f5c0fbd6e3b80f6f6a

--- a/index.html
+++ b/index.html
@@ -25,16 +25,22 @@
   <body>
 
     <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="navbar centered" role="navigation">
         <div class="navbar-header">
           <ul class="nav navbar-nav clear">
             <li><a href="#festivities">Festivities</a></li>
-            <li><a href="#hotels">Accomodations</a></li>
             <li><a href="#directions">Directions</a></li>
+            <li><a href="#hotels">Accomodations</a></li>
+            <li><a href="#todo">Things To Do</a></li>
+            <li><a href="#registry">Registry</a></li>
+            <li><a href="/gallery.html">Gallery</a></li>
             <li><a href="#contact">Contact</a></li>
             <br class="clear" />
           </ul>
+          <br class="clear" />
+
         </div>
+        <br class="clear" />
     </div>
 
     <div class="container">
@@ -58,18 +64,20 @@
         <h3>Friday, September 26th</h3>
 
         <h4>Rehearsal Dinner <small>5pm-7pm (Family invited)</small></h4>
-        <p>Location: TBD Oneonta, NY -- close to major hotels</p>
+        <p>Location TBD near Oneonta&mdash; close to major hotels</p>
+        <p>Dress is business casual.</p>
 
         <h4>Rehearsal Bowl <small>8pm-10pm (Everyone invited)</small></h4>
-        <p>Location: Holiday Lanes- 5198 State Highway 23 # 1, Oneonta, NY 13820</p>
-        <p>Phone: 607.432.2540</p>
+        <p>Holiday Lanes&mdash; 5198 State Highway 23 # 1, Oneonta, NY 13820</p>
+        <p>607.432.2540</p>
 
-        <p>Come say hello to the bride and groom, mingle with friends and family, and bowl a game or two. There's also an arcade, pool tables, a full bar, and pub menu. We wil have a few lanes reserved. Shoe rental and a game is $9. We will send an Eventbrite invitation as the date gets closer for RSVP. Dress is casual!</p>
+        <p>Come say hello to the bride and groom, mingle with friends and family, and bowl a game or two. There's also an arcade, pool tables, a full bar, and pub menu. We will have a few lanes reserved. Shoe rental and a game is $9. We will send an Eventbrite invitation as the date gets closer for RSVP. Dress is casual!</p>
 
         <h3>Saturday, September 27th</h3>
 
         <h4>The Big Day <small>4pm-12am</small></h4>
-        <p>Location: Maple Shade Farm- 2066 County Hwy 18, Delhi, New York, 607.746.8866</p>
+        <p>Maple Shade Farm&mdash; 2066 County Hwy 18, Delhi, New York</p>
+        <p>607.746.8866</p>
         <p>Join us for our ceremony, BBQ, and dancing! Dress is festive. Wedges or flats are recommended (you'll sink in heals!).</p>
 
         <h3>Sunday, September 28th</h3>
@@ -82,54 +90,6 @@
         </a>
       </div>
 
-
-      <!--Hotels-->
-      <div class="container">
-
-        <h2><span>Accomodations</span></h2>
-
-        <a name="hotels"></a>
-
-        <h3>Hampton Inn - <small>$99/night</small></h3>
-        <p>We have blocks of rooms reserved at this hotel. Make sure to mention the "Carpita-Pollaci Wedding" to get the group rate, which will be valid until late July. We recommend people book their accommodations as soon as possible, as this is a popular time of year for visitors. Check in time is 3pm.</p>
-        <p>225 River Street, Oneonta, New York, 13820</p>
-        <p>Phone: 607.433.9000</p>
-        <p><a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html">Hampton Inn Website</a></p>
-
-
-        <h3>Holiday Inn - <small>$129+/night</small></h3>
-        <p>Another reliable choice in Oneonta, this hotel is adjacent to the venue for our Rehearsal Bowl. There's no group rate here, but we have actually stayed here before and recommend it as an alternative to Hampton Inn. Check in time is 3pm.</p>
-        <p>5206 New York 23, Oneonta, NY 13820</p>
-        <p>Phone: 607.433.2250</p>
-
-        <h3>Vacation Rentals</h3>
-        <p>If you want somewhere more rustic or adventurous to stay, we
-          recommend checking out available houses near Delhi on
-            <a href="https://www.airbnb.com/s/Delhi--NY--United-States?checkin=09%2F26%2F2014&amp;checkout=09%2F28%2F2014&amp;guests=2">AirBnB</a>
-          </p>
-
-        <h3>Camping</h3>
-        <p>Upstate New York has many great camping sites.  Search for campsites
-        near Delhi on September 27th on the <a href="http://newyorkstateparks.reserveamerica.com/">NYS Campground Reservation Site.</a></p>
-
-        <div class="imagetitle">
-        <a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html">
-          <img src="/assets/img/hampton-inn-room.jpg" class="round" />
-        </a>
-        </div>
-      </div>
-
-      <div class="container">
-        <h2>Things to Do</h2>
-        <p>Details Coming Soon</p>
-      </div>
-
-      <div class="container">
-      <h2>Gift Registry</h2>
-      <p>Details Coming Soon</p>
-      </div>
-
- 
       <!-- Directions -->
       <div class="container">
         <a name="directions"></a>
@@ -152,15 +112,15 @@
           <h3>Taxi Services</h3>
 
           <h4>A &amp; D Taxis</h4>
-          <p>Phone: 608.433.TAXI</p>
+          <p>608.433.TAXI</p>
           <p><a href="http://www.adtransportservices.com">http://www.adtransportservices.com</a></p>
 
           <h4>Oneonta Taxi</h4>
-          <p>Phone: 607.437.5267</p>
+          <p>607.437.5267</p>
           <p><a href="http://www.oneonta-ny-taxi.com">http://www.oneonta-ny-taxi.com</a></p>
 
           <h4>All Star Taxi Service</h4>
-          <p>Phone: 607.267.1834</p>
+          <p>607.267.1834</p>
         <div class="imagetitle">
         <a href="https://www.google.com/maps/dir//Maple+Shade+Farm,+2066+County+Hwy+18,+Delhi,+NY+13753/@42.316361,-74.898578,11z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89dc7a3d318ba153:0x42a252d66d671cfc!2m2!1d-74.8702!2d42.301286?hl=en-US">
           <img alt="Google Map" src="/assets/img/maple-shade-map.jpg"
@@ -171,7 +131,61 @@
       </div>
 
 
+      <!--Hotels-->
+      <div class="container">
 
+        <h2><span>Accomodations</span></h2>
+
+        <a name="hotels"></a>
+
+        <h3>Hampton Inn - <small>$99/night</small></h3>
+        <p>We have blocks of rooms reserved at this hotel. Make sure to mention the "Carpita-Pollaci Wedding" to get the group rate, which will be valid until late July. We recommend people book their accommodations as soon as possible, as this is a popular time of year for visitors. Check in time is 3pm.</p>
+        <p>225 River Street, Oneonta, New York, 13820</p>
+        <p>607.433.9000</p>
+        <p><a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html">Hampton Inn Website</a></p>
+
+
+        <h3>Holiday Inn - <small>$129+/night</small></h3>
+        <p>Another reliable choice in Oneonta, this hotel is adjacent to the venue for our Rehearsal Bowl. There's no group rate here, but we have actually stayed here before and recommend it as an alternative to Hampton Inn. Check in time is 3pm.</p>
+        <p>5206 New York 23, Oneonta, NY 13820</p>
+        <p>607.433.2250</p>
+
+        <h3>Vacation Rentals</h3>
+        <p>If you want somewhere more rustic or adventurous to stay, we
+          recommend checking out available houses near Delhi on
+            <a href="https://www.airbnb.com/s/Delhi--NY--United-States?checkin=09%2F26%2F2014&amp;checkout=09%2F28%2F2014&amp;guests=2">AirBnB</a>.
+
+          You can also check out Maple Shade's website under <a href="http://www.mapleshadefarmny.com/plan-a-visit/">Plan a Visit</a> for a listing of guesthouses, historic inns, and farmhouse B&amp;B's
+          </p>
+
+        <h3>Camping</h3>
+        <p>Upstate New York has many great camping sites.  Search for campsites
+        near Delhi on September 27th on the <a href="http://newyorkstateparks.reserveamerica.com/">NYS Campground Reservation Site.</a></p>
+
+        <div class="imagetitle">
+        <a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html">
+          <img src="/assets/img/hampton-inn-room.jpg" class="round" />
+        </a>
+        </div>
+      </div>
+
+      <div class="container">
+        <a name="todo"></a>
+        <h2>Things to Do</h2>
+        <p>Details Coming Soon</p>
+      </div>
+
+      <div class="container">
+        <a name="registry"></a>
+        <h2>Gift Registry</h2>
+        <p>Details Coming Soon</p>
+      </div>
+
+      <div class="container">
+        <a name="gallery"></a>
+        <h2>Gallery</h2>
+        <p><a href="/gallery.html">Visit the gallery</a> to see more of us!</p>
+      </div>
       <div class="container">
       <a name="contact"></a>
       <h2>Contact Us</h2>
