--- a/gallery.html
+++ b/gallery.html
@@ -11,9 +11,53 @@
     <title>Gallery | Chris &amp; Danielle</title>
 
     <link href="/assets/css/wedding.css" rel="stylesheet">
-
+    <link href="/assets/css/lightbox.css" rel="stylesheet" />
+    <script src="/assets/js/jquery-1.10.2.min.js"></script>
+    <script src="/assets/js/lightbox-2.6.min.js"></script>
   </head>
   <body>
+    <div class="container gallery">
+    <h1>Gallery <small><a href="/">Home</a></small></h1>
 
+      <div class="image">
+        <a href="/assets/img/gallery-1.jpg" data-lightbox="gallery">
+          <img src="/assets/img/gallery-1.thumb.jpg" />
+        </a>
+      </div>
+
+      <div class="image">
+        <a href="/assets/img/gallery-2.jpg" data-lightbox="gallery">
+          <img src="/assets/img/gallery-2.thumb.jpg" />
+        </a>
+      </div>
+
+      <div class="image">
+        <a href="/assets/img/gallery-3.jpg" data-lightbox="gallery">
+          <img src="/assets/img/gallery-3.thumb.jpg" />
+        </a>
+      </div>
+
+      <div class="image">
+        <a href="/assets/img/gallery-4.jpg" data-lightbox="gallery">
+          <img src="/assets/img/gallery-4.thumb.jpg" />
+        </a>
+      </div>
+
+      <div class="image">
+        <a href="/assets/img/gallery-5.jpg" data-lightbox="gallery">
+          <img src="/assets/img/gallery-5.thumb.jpg" />
+        </a>
+      </div>
+
+
+      <div class="image">
+        <a href="/assets/img/gallery-6.jpg" data-lightbox="gallery">
+          <img src="/assets/img/gallery-6.thumb.jpg" />
+        </a>
+      </div>
+    </div>
+    <div class="container">
+      <a href="/">Return to Home</a>
+    </div>
   </body>
 </html>
