--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <br style="clear:left" />
-        <h3><strong>Come celebrate with us!</strong></h3>
+        <h3 class="nopad"><strong>Come celebrate with us!</strong></h3>
       </div>
 
       <div class="container">
@@ -149,13 +149,14 @@
         <p>Another reliable choice in Oneonta, this hotel is adjacent to the venue for our Rehearsal Bowl. There's no group rate here, but we have actually stayed here before and recommend it as an alternative to Hampton Inn. Check in time is 3pm.</p>
         <p>5206 New York 23, Oneonta, NY 13820</p>
         <p>607.433.2250</p>
+        <p><a href="http://www.ihg.com/holidayinn/hotels/us/en/oneonta/onhny/hoteldetail">Holiday Inn Website</a></p>
 
         <h3>Vacation Rentals</h3>
         <p>If you want somewhere more rustic or adventurous to stay, we
           recommend checking out available houses near Delhi on
             <a href="https://www.airbnb.com/s/Delhi--NY--United-States?checkin=09%2F26%2F2014&amp;checkout=09%2F28%2F2014&amp;guests=2">AirBnB</a>.
 
-          You can also check out Maple Shade's website under <a href="http://www.mapleshadefarmny.com/plan-a-visit/">Plan a Visit</a> for a listing of guesthouses, historic inns, and farmhouse B&amp;B's
+          You can also check out Maple Shade's website under <a href="http://www.mapleshadefarmny.com/plan-a-visit/">Plan a Visit</a> for a listing of guesthouses, historic inns, and farmhouse B&amp;B's.
           </p>
 
         <h3>Camping</h3>
