typo: heals -> heels

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h4>The Big Day <small>4pm-12am</small></h4>
         <p>Maple Shade Farm&mdash; 2066 County Hwy 18, Delhi, New York</p>
         <p>607.746.8866</p>
-        <p>Join us for our ceremony, BBQ, and dancing! Dress is festive. Wedges or flats are recommended (you'll sink in heals!).</p>
+        <p>Join us for our ceremony, BBQ, and dancing! Dress is festive. Wedges or flats are recommended (you'll sink in heels!).</p>
 
         <h3>Sunday, September 28th</h3>
         <h4>Bagel Brunch <small>10am-1pm</small></h4>
