Danielle's given and family name first

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Chris Carpita">
+    <meta name="author" content="Danielle &amp; Chris">
 
-    <title>Chris &amp; Danielle are Getting Married on September 27, 2014!</title>
+    <title>Danielle &amp; Chris are Getting Married on September 27, 2014</title>
 <!--
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" />
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
@@ -46,7 +46,7 @@
     <div class="container">
       <!-- Main component for a primary marketing message or call to action -->
       <div style="text-align:center">
-        <h1>Chris &amp; Danielle are Getting Married!</h1>
+        <h1>Danielle &amp; Chris are Getting Married!</h1>
         <h3>September 27, 2014</h3>
 
         <div class="row text-center" style="padding:5px">
@@ -139,7 +139,7 @@
         <a name="hotels"></a>
 
         <h3>Hampton Inn - <small>$99/night</small></h3>
-        <p>We have blocks of rooms reserved at this hotel. Make sure to mention the "Carpita-Pollaci Wedding" to get the group rate, which will be valid until late July. We recommend people book their accommodations as soon as possible, as this is a popular time of year for visitors. Check in time is 3pm.</p>
+        <p>We have blocks of rooms reserved at this hotel. Make sure to mention the "Pollaci-Carpita Wedding" to get the group rate, which will be valid until late July. We recommend people book their accommodations as soon as possible, as this is a popular time of year for visitors. Check in time is 3pm.</p>
         <p>225 River Street, Oneonta, New York, 13820</p>
         <p>607.433.9000</p>
         <p><a href="http://hamptoninn3.hilton.com/en/hotels/new-york/hampton-inn-oneonta-ONHNJHX/accommodations/suites.html">Hampton Inn Website</a></p>
