--- a/src/public/gallery.html
+++ b/src/public/gallery.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Chris Carpita">
+    <meta name="author" content="Danielle &amp; Chris">
 
-    <title>Gallery | Chris &amp; Danielle</title>
+    <title>Gallery | Danielle &amp; Chris</title>
 
     <link href="/assets/css/wedding.css" rel="stylesheet">
     <link href="/assets/css/lightbox.css" rel="stylesheet" />
