--- a/src/public/index.html
+++ b/src/public/index.html
@@ -82,8 +82,9 @@
 
         <h3>Sunday, September 28th</h3>
         <h4>Bagel Brunch <small>10am-1pm</small></h4>
-        <p>Location: Maple Shade Farm- 2066 County Hwy 18, Delhi, New York, 607.746.8866</p>
-        <p>Come say hi to the newlyweds back at the farm for a bite before you travel home.</p>
+        <p>Maple Shade Farm&mdash; 2066 County Hwy 18, Delhi, New York</p>
+        <p>607.746.8866</p>
+        <p>Come say hi to the newlyweds back at the farm for a bite before you travel home. Dress is casual.</p>
          <a href="http://www.mapleshadefarmny.com/">
           <img src="/assets/img/maple-shade-front.jpg"
           class="round" />
